--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;600;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap');
 
 :root {
   font-synthesis: none;
@@ -6,31 +7,33 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
-  --color-background: #161616;
-  --color-on-background: #deddec;
+  --color-background: linear-gradient(160deg, rgba(182, 31, 31, 0.212) 0%, rgba(209, 25, 80, 0) 36.63%), #13111C;
+  --color-on-background: #ececec;
 
-  --color-surface: rgba(255, 255, 255, 0.055);
+  --color-surface:  #6d162588;
   --color-on-surface: #deddec;
 
-  --color-primary: rgba(255, 86, 56, 0.644);
+  --color-primary: #922537e1;
   --color-on-primary: #fff;
 
-  --color-secondary:
-  --color-on-secondary:
+  --color-neutral: #b9b9b9;
+  --color-on-neutral: #000;
 
-  --color-neutral:
-  --color-on-neutral:
+  --color-shadow: #03030371;
 
+  --font-weight-lightest: 200;
   --font-weight-light: 300;
   --font-weight-medium: 400;
-  --font-weight-bold: 700;
+  --font-weight-bold: 500;
+  --font-weight-bolder: 600;
+  --font-weight-boldest: 700;
 
-  --font-size-h1: 56px;
-  --font-size-h2: 24px;
+  --font-size-title: 56px;
+  --font-size-subtitle: 24px;
   --font-size-body-xs: 10px;
   --font-size-body-sm: 12px;
   --font-size-body-md: 15px;
-  --font-size-body-lg: 17px;
+  --font-size-body-lg: 20px;
   --font-size-icons: 26px;
 
   --pad-xs: 3px;
@@ -38,14 +41,19 @@
   --pad-md: 16px;
   --pad-lg: 24px;
   --pad-xl: 36px;
+  --pad-xxl: 80px;
 
   --margin-xs: 4px;
   --margin-sm: 8px;
   --margin-md: 16px;
   --margin-lg: 24px;
+  --margin-xl: 36px;
+
 
   --corner-radius-sm: 2px;
   --corner-radius: 4px;
+
+  --box-shadow: 0px 1px 20px var(--color-shadow);
 }
 
 * {
@@ -55,24 +63,33 @@
 }
 
 body {
-  font-family: "Inter", "Helvetica Neue", "Noto Sans", Arial, sans-serif;
+  font-family: 'Inter', 'Mulish', 'Inter', 'Helvetica Neue', 'Noto Sans', Arial, sans-serif;
   font-size: var(--font-size-body-md);
-  font-weight: var(--font-weight-body);
+  font-weight: var(--font-weight-light);
   line-height: 1.5;
   color: var(--color-on-background);
-  background-color: var(--color-background);
-  margin: var(--margin-lg);
+  background: var(--color-background);
+  display: flex;
+  justify-content: center;
+}
+
+.page-container {
+  padding: var(--pad-lg);
+  width: 90vw;
+
+  @media (min-width: 1400px) { width: 70vw; }
+  @media (min-width: 1600px) { width: 50vw; }
 }
 
 h1 {
-  font-size: var(--font-size-h1);
+  font-size: var(--font-size-title);
   font-weight: var(--font-weight-bold);
   letter-spacing: -3px;
 }
 
 h2 {
-  font-size: var(--font-size-h2);
-  font-weight: var(--font-weight-light);
+  font-size: var(--font-size-subtitle);
+  font-weight: var(--font-weight-medium);
   letter-spacing: 1px;
 }
 
@@ -89,7 +106,13 @@ a {
   text-transform: uppercase;
   letter-spacing: 2px;
   font-size: var(--font-size-body-sm);
-  font-weight: var(--font-weight-bold);
+  font-weight: var(--font-weight-boldest);
+}
+
+.subtitle-sm {
+  letter-spacing: 1px;
+  font-size: var(--font-size-body-sm);
+  color: var(--color-neutral);
 }
 
 .row {
