--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,11 +10,14 @@
   --color-background: linear-gradient(160deg, rgba(182, 31, 31, 0.212) 0%, rgba(209, 25, 80, 0) 36.63%), #13111C;
   --color-on-background: #ececec;
 
-  --color-surface:  #6d162588;
+  --color-surface:  #6d162462;
   --color-on-surface: #deddec;
 
-  --color-primary: #922537e1;
+  --color-primary: #922537ab;
   --color-on-primary: #fff;
+
+  --color-secondary: #8d65ce62;
+  --color-on-secondary: #fff;
 
   --color-neutral: #b9b9b9;
   --color-on-neutral: #000;
@@ -32,7 +35,7 @@
   --font-size-subtitle: 24px;
   --font-size-body-xs: 10px;
   --font-size-body-sm: 12px;
-  --font-size-body-md: 15px;
+  --font-size-body-md: 14px;
   --font-size-body-lg: 20px;
   --font-size-icons: 26px;
 
@@ -49,8 +52,6 @@
   --margin-lg: 24px;
   --margin-xl: 36px;
 
-
-  --corner-radius-sm: 2px;
   --corner-radius: 4px;
 
   --box-shadow: 0px 1px 20px var(--color-shadow);
@@ -62,8 +63,13 @@
   padding: 0;
 }
 
+::-webkit-scrollbar {
+  width: 0px;
+  background: transparent;
+}
+
 body {
-  font-family: 'Inter', 'Mulish', 'Inter', 'Helvetica Neue', 'Noto Sans', Arial, sans-serif;
+  font-family: 'Mulish', 'Inter', 'Helvetica Neue', 'Noto Sans', Arial, sans-serif;
   font-size: var(--font-size-body-md);
   font-weight: var(--font-weight-light);
   line-height: 1.5;
@@ -122,4 +128,22 @@ a {
 .col {
   display: flex;
   flex-direction: column;
+}
+
+.icon {
+  font-size: 38px;
+}
+
+.technologies {
+  flex-wrap: wrap;
+  margin: var(--margin-sm) 0;
+  gap: var(--pad-sm);
+  
+  div {
+    background-color: var(--color-primary);
+    color: var(--color-on-primary);
+    font-size: var(--font-size-body-sm);
+    padding: var(--pad-xs) var(--pad-sm);
+    border-radius: var(--corner-radius);
+  }
 }
