--- a/src/components/ProjectCard/styles.scss
+++ b/src/components/ProjectCard/styles.scss
@@ -1,42 +1,76 @@
 .project-card-comp {
-  margin: 0 auto;
-  display: flex;
-  flex-direction: column;
-  max-height: 280px;
-  max-width: 100%;
-  overflow: hidden;
-  position: relative;
-  border-radius: var(--corner-radius);
-  transition: ease-in-out transform 400ms;
-
-  &:hover {
-    cursor: pointer;
-    transform: translateX(3px);
-  }
-  
-  img {
-    object-fit: cover;
-    object-position: top;
-    z-index: 100;
-  }
-  
-  .overlay {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    background: linear-gradient(to right, rgba(0, 0, 0, 0.603), rgba(0, 0, 0, 0));
-    z-index: 200;
+  .icon {
+    color: #ffffff8c;
+    transition: ease-out color 500ms;
+    &:hover {
+      cursor: pointer;
+      color: #fff;
+    }
   }
 
-  p {
-    position: absolute;
-    left: 3%;
-    bottom: 5%;
-    z-index: 300;
-    font-size: var(--font-size-subtitle);
-    letter-spacing: 1px;
+  .splash-container {
+    .icon {
+      display: none;
+      position: absolute;
+      bottom: var(--pad-sm);
+      right: var(--pad-md);
+      z-index: 400;
+    }
+    
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    max-height: 260px;
+    overflow: hidden;
+    position: relative;
+    
+    &:hover {
+      .icon { display: block; }
+    }
+    
+    img {
+      object-fit: cover;
+      object-position: top;
+      z-index: 100;
+      max-height: 300px;
+    }
+    
+    .overlay {
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      max-height: 300px;
+      background: linear-gradient(to right, rgba(0, 0, 0, 0.603), rgba(0, 0, 0, 0));
+      z-index: 200;
+    }
+  }
+  
+  .expanded-section {
+    gap: var(--pad-md);
+    padding: var(--pad-lg) var(--pad-md) var(--pad-xs);
     color: white;
+
+    .name {
+      font-size: var(--font-size-subtitle);
+      letter-spacing: 1px;
+      color: white;
+    }
+
+    .technologies {
+      div {
+        background-color: var(--color-secondary);
+      }
+    }
+
+    .links-container {
+      justify-content: space-between;
+      align-items: center;
+
+      .links {
+        gap: var(--pad-md);
+      }
+    }
   }
 }
