--- a/src/components/ProjectCard/styles.scss
+++ b/src/components/ProjectCard/styles.scss
@@ -1,38 +1,24 @@
 .project-card-comp {
-  .icon {
-    color: #ffffff8c;
-    transition: ease-out color 500ms;
-    &:hover {
-      cursor: pointer;
-      color: #fff;
-    }
-  }
-
   .splash-container {
-    .icon {
-      display: none;
-      position: absolute;
-      bottom: var(--pad-sm);
-      right: var(--pad-md);
-      z-index: 400;
-    }
-    
     margin: 0 auto;
     display: flex;
+    border-radius: var(--corner-radius);
     flex-direction: column;
-    max-height: 260px;
+    max-height: 200px;
     overflow: hidden;
     position: relative;
-    
-    &:hover {
-      .icon { display: block; }
+
+    &:hover ~ .expanded-section { 
+      padding: var(--pad-lg);
+      max-height: 200px;
+      opacity: 1;
     }
     
     img {
       object-fit: cover;
       object-position: top;
       z-index: 100;
-      max-height: 300px;
+      max-height: 500px;
     }
     
     .overlay {
@@ -41,36 +27,35 @@
       right: 0;
       bottom: 0;
       left: 0;
-      max-height: 300px;
-      background: linear-gradient(to right, rgba(0, 0, 0, 0.603), rgba(0, 0, 0, 0));
+      min-height: 500px;
+      background: linear-gradient(to right, rgba(37, 26, 24, 0.13), rgba(0, 0, 0, 0));
       z-index: 200;
     }
   }
   
   .expanded-section {
-    gap: var(--pad-md);
-    padding: var(--pad-lg) var(--pad-md) var(--pad-xs);
-    color: white;
+    gap: var(--pad-sm);
+    padding: var(--pad-xs);
+    opacity: 0;
+    max-height: 0;
+    overflow: hidden;
+    transition: opacity 300ms ease, max-height 800ms ease, padding 500ms ease;
+
+    &:hover { 
+      padding: var(--pad-lg);
+      max-height: 200px;
+      opacity: 1;
+    }
 
     .name {
       font-size: var(--font-size-subtitle);
       letter-spacing: 1px;
-      color: white;
     }
 
     .technologies {
-      div {
-        background-color: var(--color-secondary);
-      }
+      div { background-color: var(--color-secondary); }
     }
 
-    .links-container {
-      justify-content: space-between;
-      align-items: center;
-
-      .links {
-        gap: var(--pad-md);
-      }
-    }
+    .links { gap: var(--pad-md); }
   }
 }
