--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,19 +7,20 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
-  --color-background: linear-gradient(160deg, rgba(182, 31, 31, 0.212) 0%, rgba(209, 25, 80, 0) 36.63%), #13111C;
-  --color-on-background: #ececec;
+  --color-background: linear-gradient(160deg, #97f8b465 0%, #201dca00 34%), #ebb88e;
+  --color-on-background: black;
 
-  --color-surface:  #6d162462;
-  --color-on-surface: #deddec;
+  --color-surface:  #fff7f3;
+  --color-on-surface: black;
 
-  --color-primary: #922537ab;
+  --color-primary: #83964ff1;
+  --color-primary-alternative: #5b721af1;
   --color-on-primary: #fff;
 
-  --color-secondary: #8d65ce62;
+  --color-secondary: #e78c78;
   --color-on-secondary: #fff;
 
-  --color-neutral: #b9b9b9;
+  --color-neutral: #5c5c5c;
   --color-on-neutral: #000;
 
   --color-shadow: #03030371;
@@ -73,7 +74,7 @@
 body {
   font-family: 'Mulish', 'Inter', 'Helvetica Neue', 'Noto Sans', Arial, sans-serif;
   font-size: var(--font-size-body-md);
-  font-weight: var(--font-weight-light);
+  font-weight: var(--font-weight-medium);
   line-height: 1.5;
   color: var(--color-on-background);
   background: var(--color-background);
@@ -82,7 +83,10 @@ body {
 }
 
 .page-container {
-  width: 90vw;
+  margin: var(--pad-xl);
+  padding: var(--pad-xl);
+  background: var(--color-surface);
+  border-radius: var(--corner-radius);
 
   @media (min-width: 1200px) { width: 70vw; }
   @media (min-width: 1600px) { width: 50vw; }
@@ -110,7 +114,10 @@ ul {
 
 a {
   text-decoration: none;
-  color: var(--color-on-background);
+  font-weight: var(--font-weight-bolder);
+  color: var(--color-primary);
+
+  &:hover { color: var(--color-primary-alternative); }
 }
 
 .subtitle {
