--- a/src/components/ExperienceCard/styles.scss
+++ b/src/components/ExperienceCard/styles.scss
@@ -1,16 +1,13 @@
 .experience-card-comp {
   color: var(--color-on-surface);
   font-weight: var(--font-weight-medium);
-  margin: var(--margin-sm) 0;
-  padding: var(--pad-lg);
+  padding: var(--pad-md) 0;
   z-index: 400;
   border-radius: var(--corner-radius);
   transition: ease-in-out box-shadow 400ms, background-color 400ms, transform 400ms;
 
   &.col {
-    @media (min-width: 1200px) {
-      flex-direction: row;
-    }
+    @media (min-width: 1200px) { flex-direction: row; }
   }
   
   &:hover {
@@ -19,25 +16,19 @@
     transform: translateX(3px);
   }
   
-  .date {
-    min-width: 200px;
-  }
+  .date { min-width: 200px; }
   
   .content-ctr {
     gap: var(--pad-sm);
   
-    ul {
-      gap: var(--pad-sm);
-    }
+    ul { gap: var(--pad-sm); }
 
     .company, .title {
       letter-spacing: 1px;
       font-size: var(--font-size-body-lg);
     }
     
-    .company {
-      font-weight: var(--font-weight-bolder);
-    }
+    .company { font-weight: var(--font-weight-bolder); }
     
     .location {
       letter-spacing: 1px;
