--- a/src/styles.scss
+++ b/src/styles.scss
@@ -83,10 +83,17 @@ body {
 }
 
 .page-container {
-  margin: var(--pad-xl);
-  padding: var(--pad-xl);
+  margin: var(--pad-sm);
+  padding: var(--pad-md);
   background: var(--color-surface);
   border-radius: var(--corner-radius);
+  width: 97vw;
+
+  @media (min-width: 600px) {
+    width: 90vw;
+    margin: var(--pad-xl);
+    padding: var(--pad-xl);
+  }
 
   @media (min-width: 1200px) { width: 70vw; }
   @media (min-width: 1600px) { width: 50vw; }
