--- a/src/pages/Landing/styles.scss
+++ b/src/pages/Landing/styles.scss
@@ -14,6 +14,10 @@
   .section {
     gap: var(--pad-md);
 
+    .bio {
+      font-size: var(--font-size-body-lg);
+    }
+
     .text-image-container {
       justify-content: center;
       align-items: center;
