Remove margin. Tweak bg color.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,7 +7,7 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
-  --color-background: #f0cfba;
+  --color-background: #f3daca;
   --color-on-background: #252525;
 
   --color-surface:  #fff7f3;
