--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,25 +7,26 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
-  --color-background: #f3daca;
-  --color-on-background: #252525;
+  --color-background: #f5f2e2;
+  --color-on-background: #202020;
 
-  --color-surface:  #fff7f3;
-  --color-on-surface: #252525;
+  --color-surface: #FFFFFF;
+  --color-on-surface: #202020;
 
-  --color-primary: #b95254;
-  --color-primary-alternative: #b83d3f;
-  --color-on-primary: #fff;
+  --color-primary: #e9756c;
+  --color-primary-alt: #dd3d31;
+  --color-on-primary: #FFFFFF;
 
-  --color-secondary: #e2885f;
-  --color-on-secondary: #fff;
+  --color-secondary: #839bcf;
+  --color-secondary-alt: #3169e4;
+  --color-on-secondary: #FFFFFF;
 
-  --color-neutral: #5c5c5c;
-  --color-neutral-light: #e6e6e6;
-  --color-on-neutral: #252525;
+  --color-neutral: #555555;
+  --color-neutral-light: #BDBDBD;
+  --color-on-neutral: #212121;
 
-  --color-shadow: #03030323;
-
+  --color-shadow: rgba(18, 18, 18, 0.205);
+  
   --font-weight-lightest: 200;
   --font-weight-light: 300;
   --font-weight-medium: 400;
@@ -76,7 +77,7 @@ body {
   font-family: 'Mulish', 'Inter', 'Helvetica Neue', 'Noto Sans', Arial, sans-serif;
   font-size: var(--font-size-body-md);
   font-weight: var(--font-weight-medium);
-  line-height: 1.5;
+  line-height: 1.6;
   color: var(--color-on-background);
   background: var(--color-background);
   display: flex;
@@ -84,7 +85,7 @@ body {
 }
 
 .page-container {
-  margin: var(--pad-sm);
+  // margin: var(--pad-sm);
   padding: var(--pad-md);
   background: var(--color-surface);
   border-radius: var(--corner-radius);
@@ -123,9 +124,9 @@ ul {
 a {
   text-decoration: none;
   font-weight: var(--font-weight-bolder);
-  color: var(--color-primary);
+  color: var(--color-secondary);
 
-  &:hover { color: var(--color-primary-alternative); }
+  &:hover { color: var(--color-secondary-alt); }
 }
 
 .subtitle {
@@ -137,6 +138,7 @@ a {
 
 .subtitle-sm {
   letter-spacing: 1px;
+  font-weight: var(--font-weight-bolder);
   font-size: var(--font-size-body-sm);
   color: var(--color-neutral);
 }
