--- a/src/styles.scss
+++ b/src/styles.scss
@@ -85,11 +85,10 @@ body {
 }
 
 .page-container {
-  // margin: var(--pad-sm);
-  padding: var(--pad-md);
+  padding: var(--pad-lg);
   background: var(--color-surface);
   border-radius: var(--corner-radius);
-  width: 97vw;
+  width: 100vw;
 
   @media (min-width: 600px) {
     width: 90vw;
